UIHeader: Fix z-index bug

--- a/src/components/UI/UIHeader.css
+++ b/src/components/UI/UIHeader.css
@@ -3,7 +3,7 @@
   position: sticky;
   top: 0px;
   background-color: rgba(253, 253, 253, 0.95);
-  
+  z-index: 1000;
 }
 .header-nav .content {
   max-width: 40rem;
